manifests/05-deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    image.openshift.io/triggers: |
      [
        {"from":{"kind":"ImageStreamTag","name":"kaas:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"kaas\")].image"}
      ]
  labels:
    app: kaas
  name: kaas
  namespace: kaas
spec:
  replicas: 1
  selector:
    deploymentconfig: kaas
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: kaas
        deploymentconfig: kaas
    spec:
      containers:
        - image: ''
          imagePullPolicy: Always
          name: kaas
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      serviceAccountName: kaas-robot
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - kaas
        from:
          kind: ImageStreamTag
          name: 'kaas:latest'
      type: ImageChange
    - type: ConfigChange
