manifests/06-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kaas
  namespace: kaas
spec:
  selector:
    deploymentconfig: kaas
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
