manifests/07-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: kaas
  namespace: kaas
spec:
  to:
    kind: Service
    name: kaas
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
