manifests/12-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cert-issuer
  name: kaas
  namespace: kaas
spec:
  tls:
    - secretName: kaas-tls
      hosts:
        - kaas.dptools.openshift.org
  rules:
  - host: kaas.dptools.openshift.org
    http:
      paths:
      - backend:
          service:
            name: kaas
            port:
              number: 8080
        pathType: ImplementationSpecific
